[eZRedis] Add abstract class to use redis api

--- a/settings/redis.ini
+++ b/settings/redis.ini
@@ -9,9 +9,23 @@
 #       in non-virtualhost modes (the .php file may already be present
 #       and can be used for this purpose).
 
-[RedisSettings]
+[DatabaseSettings]
 Database[]
 ; Database[1] = example
+
+DatabaseImplementation=ezredis
+Server=localhost
+Port=6379
+User=
+Password=
+Socket=disabled
+QueryAnalysisOutput=disabled
+SQLOutput=disabled
+
+ImplementationAlias[redis]=eZRedisDB
+ImplementationAlias[ezredis]=eZRedisDB
+
+UsePersistentConnection=disabled
 
 [RedisCacheSettings]
 CacheMysqlSelectQuerie=disabled
