[eZRedis] Add support to transform all phpredis methods in redis api method

--- a/settings/redis.ini
+++ b/settings/redis.ini
@@ -29,3 +29,173 @@ UsePersistentConnection=disabled
 
 [RedisCacheSettings]
 CacheMysqlSelectQuerie=disabled
+
+[PHPRedisSettings]
+PhpRedisMethod[]
+PhpRedisMethod[append]=append
+PhpRedisMethod[auth]=auth
+PhpRedisMethod[bgrewriteaof]=bgrewriteaof
+PhpRedisMethod[bgsave]=bgSave
+PhpRedisMethod[bitcount]=bitcount
+PhpRedisMethod[bitop]=bitop
+PhpRedisMethod[bitpos]=bitpos
+PhpRedisMethod[blPop]=blPop
+PhpRedisMethod[brPop]=brPop
+PhpRedisMethod[brpoplpush]=brpoplpush
+; PhpRedisMethod[clearLastError]=clearLastError
+PhpRedisMethod[client]=client
+PhpRedisMethod[quit]=close
+PhpRedisMethod[config]=config
+PhpRedisMethod[connect]=connect
+PhpRedisMethod[dbsize]=dbSize
+PhpRedisMethod[debug]=debug
+PhpRedisMethod[decr]=decr
+PhpRedisMethod[decrby]=decrBy
+PhpRedisMethod[del]=delete
+PhpRedisMethod[discard]=discard
+PhpRedisMethod[dump]=dump
+PhpRedisMethod[echo]=echo
+PhpRedisMethod[eval]=eval
+PhpRedisMethod[evalsha]=evalsha
+PhpRedisMethod[exec]=exec
+PhpRedisMethod[exists]=exists
+PhpRedisMethod[expireat]=expireAt
+PhpRedisMethod[flushall]=flushAll
+PhpRedisMethod[flushdb]=flushDB
+PhpRedisMethod[get]=get
+; PhpRedisMethod[getAuth]=getAuth
+PhpRedisMethod[getbit]=getBit
+; PhpRedisMethod[getDBNum]=getDBNum
+; PhpRedisMethod[getHost]=getHost
+; PhpRedisMethod[getKeys]=getKeys
+; PhpRedisMethod[getLastError]=getLastError
+; PhpRedisMethod[getMode]=getMode
+; PhpRedisMethod[getMultiple]=getMultiple
+; PhpRedisMethod[getOption]=getOption
+; PhpRedisMethod[getPersistentID]=getPersistentID
+; PhpRedisMethod[getPort]=getPort
+PhpRedisMethod[getrange]=getRange
+; PhpRedisMethod[getReadTimeout]=getReadTimeout
+PhpRedisMethod[getset]=getSet
+; PhpRedisMethod[getTimeout]=getTimeout
+PhpRedisMethod[hdel]=hDel
+PhpRedisMethod[hexists]=hExists
+PhpRedisMethod[hget]=hGet
+PhpRedisMethod[hgetall]=hGetAll
+PhpRedisMethod[hincrby]=hIncrBy
+PhpRedisMethod[hincrbyfloat]=hIncrByFloat
+PhpRedisMethod[hkeys]=hKeys
+PhpRedisMethod[hlen]=hLen
+PhpRedisMethod[hmget]=hMget
+PhpRedisMethod[hmset]=hMset
+PhpRedisMethod[hscan]=hscan
+PhpRedisMethod[hset]=hSet
+PhpRedisMethod[hsetnx]=hSetNx
+PhpRedisMethod[hvals]=hVals
+PhpRedisMethod[incr]=incr
+PhpRedisMethod[incrby]=incrBy
+PhpRedisMethod[incrbyfloat]=incrByFloat
+PhpRedisMethod[info]=info
+; PhpRedisMethod[isConnected]=isConnected
+PhpRedisMethod[lastsave]=lastSave
+PhpRedisMethod[lindex]=lGet
+PhpRedisMethod[lrange]=lGetRange
+PhpRedisMethod[linsert]=lInsert
+PhpRedisMethod[ltrim]=listTrim
+PhpRedisMethod[lpop]=lPop
+PhpRedisMethod[lpush]=lPush
+PhpRedisMethod[lpushx]=lPushx
+PhpRedisMethod[lrem]=lRemove
+PhpRedisMethod[lset]=lSet
+; PhpRedisMethod[lSize]=lSize
+PhpRedisMethod[migrate]=migrate
+PhpRedisMethod[move]=move
+PhpRedisMethod[mset]=mset
+PhpRedisMethod[msetnx]=msetnx
+PhpRedisMethod[multi]=multi
+PhpRedisMethod[object]=object
+PhpRedisMethod[pconnect]=pconnect
+PhpRedisMethod[persist]=persist
+PhpRedisMethod[pexpire]=pexpire
+PhpRedisMethod[pexpireat]=pexpireAt
+PhpRedisMethod[pfadd]=pfadd
+PhpRedisMethod[pfcount]=pfcount
+PhpRedisMethod[pfmerge]=pfmerge
+PhpRedisMethod[ping]=ping
+PhpRedisMethod[pipeline]=pipeline
+PhpRedisMethod[psetex]=psetex
+PhpRedisMethod[psubscribe]=psubscribe
+PhpRedisMethod[pttl]=pttl
+PhpRedisMethod[publish]=publish
+PhpRedisMethod[pubsub]=pubsub
+PhpRedisMethod[punsubscribe]=punsubscribe
+PhpRedisMethod[randomkey]=randomKey
+; PhpRedisMethod[rawCommand]=rawCommand
+PhpRedisMethod[randomkey]=renameKey
+PhpRedisMethod[renamenx]=renameNx
+; PhpRedisMethod[resetStat]=resetStat
+PhpRedisMethod[restore]=restore
+PhpRedisMethod[rpop]=rPop
+PhpRedisMethod[rpoplpush]=rpoplpush
+PhpRedisMethod[rpush]=rPush
+PhpRedisMethod[rpushx]=rPushx
+PhpRedisMethod[sadd]=sAdd
+PhpRedisMethod[save]=save
+PhpRedisMethod[scan]=scan
+; PhpRedisMethod[sContains]=sContains
+PhpRedisMethod[script]=script
+PhpRedisMethod[sdiff]=sDiff
+PhpRedisMethod[sdiffstore]=sDiffStore
+PhpRedisMethod[select]=select
+PhpRedisMethod[set]=set
+PhpRedisMethod[setbit]=setBit
+PhpRedisMethod[setex]=setex
+PhpRedisMethod[setnx]=setnx
+; PhpRedisMethod[setOption]=setOption
+PhpRedisMethod[setrange]=setRange
+; PhpRedisMethod[setTimeout]=setTimeout
+PhpRedisMethod[sinter]=sInter
+PhpRedisMethod[sinterstore]=sInterStore
+PhpRedisMethod[slaveof]=slaveof
+PhpRedisMethod[slowlog]=slowlog
+PhpRedisMethod[smembers]=sMembers
+PhpRedisMethod[smove]=sMove
+PhpRedisMethod[sort]=sort
+; PhpRedisMethod[sortAsc]=sortAsc
+; PhpRedisMethod[sortAscAlpha]=sortAscAlpha
+; PhpRedisMethod[sortDesc]=sortDesc
+; PhpRedisMethod[sortDescAlpha]=sortDescAlpha
+PhpRedisMethod[spop]=sPop
+PhpRedisMethod[srandmember]=sRandMember
+PhpRedisMethod[srem]=sRemove
+PhpRedisMethod[sscan]=sscan
+; PhpRedisMethod[sSize]=sSize
+PhpRedisMethod[strlen]=strlen
+PhpRedisMethod[subscribe]=subscribe
+PhpRedisMethod[sunion]=sUnion
+PhpRedisMethod[sunionstore]=sUnionStore
+PhpRedisMethod[time]=time
+PhpRedisMethod[ttl]=ttl
+PhpRedisMethod[type]=type
+PhpRedisMethod[unsubscribe]=unsubscribe
+PhpRedisMethod[unwatch]=unwatch
+; PhpRedisMethod[wait]=wait
+PhpRedisMethod[watch]=watch
+PhpRedisMethod[zadd]=zAdd
+PhpRedisMethod[zcard]=zCard
+PhpRedisMethod[zcount]=zCount
+PhpRedisMethod[zrem]=zDelete
+PhpRedisMethod[zremrangebyrank]=zDeleteRangeByRank
+PhpRedisMethod[zremrangebyscore]=zDeleteRangeByScore
+PhpRedisMethod[zincrby]=zIncrBy
+PhpRedisMethod[zinterstore]=zInter
+PhpRedisMethod[zrange]=zRange
+PhpRedisMethod[zrangebylex]=zRangeByLex
+PhpRedisMethod[zrangebyscore]=zRangeByScore
+PhpRedisMethod[zrank]=zRank
+PhpRedisMethod[zrevrange]=zReverseRange
+PhpRedisMethod[zrevrangebyscore]=zRevRangeByScore
+PhpRedisMethod[zrevrank]=zRevRank
+PhpRedisMethod[zscan]=zscan
+PhpRedisMethod[zscore]=zScore
+PhpRedisMethod[zunionstore]=zUnion
