[QueryBuilder] add support for phpredis query builder

--- a/settings/redis.ini
+++ b/settings/redis.ini
@@ -27,6 +27,10 @@ ImplementationAlias[ezredis]=eZRedisDB
 
 UsePersistentConnection=disabled
 
+# for now there is only phpRedis
+# we work on pRedis and Redisent
+RedisQueryHandler=phpRedis
+
 [RedisCacheSettings]
 CacheMysqlSelectQuerie=disabled
 
@@ -131,7 +135,7 @@ PhpRedisMethod[pubsub]=pubsub
 PhpRedisMethod[punsubscribe]=punsubscribe
 PhpRedisMethod[randomkey]=randomKey
 ; PhpRedisMethod[rawCommand]=rawCommand
-PhpRedisMethod[randomkey]=renameKey
+PhpRedisMethod[renamekey]=renameKey
 PhpRedisMethod[renamenx]=renameNx
 ; PhpRedisMethod[resetStat]=resetStat
 PhpRedisMethod[restore]=restore
