[Abstraction] completed, miss tests

--- a/settings/redis.ini
+++ b/settings/redis.ini
@@ -157,7 +157,7 @@ PhpRedisMethod[setex]=setex
 PhpRedisMethod[setnx]=setnx
 ; PhpRedisMethod[setOption]=setOption
 PhpRedisMethod[setrange]=setRange
-; PhpRedisMethod[setTimeout]=setTimeout
+PhpRedisMethod[expire]=setTimeout
 PhpRedisMethod[sinter]=sInter
 PhpRedisMethod[sinterstore]=sInterStore
 PhpRedisMethod[slaveof]=slaveof
