[Miss] correct few bugs

--- a/settings/redis.ini
+++ b/settings/redis.ini
@@ -27,6 +27,8 @@ ImplementationAlias[ezredis]=eZRedisDB
 
 UsePersistentConnection=disabled
 
+UseBuiltinEncoding=true
+
 # for now there is only phpRedis
 # we work on pRedis and Redisent
 RedisQueryHandler=phpRedis
